--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -35,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.5.0",
+    "eslint-plugin-react": "^7.27.1"
   }
 }
